Added pre-fields for index for now

--- a/index.html
+++ b/index.html
@@ -2,8 +2,49 @@
 <html>
 <head>
 	<title>Who knows, but I hope it looks decent</title>
+	<link href="https://fonts.googleapis.com/css?family=Wellfleet" rel="stylesheet"/>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 </head>
 <body>
+
+	<header>
+		<h1>Kitten Approved Gaming: Of the Randomness</h1>
+		<p>Let's be part of something fun?</p>
+	</header>
+
+	<nav>
+		<ul>
+			<li></li><!--
+			--><li></li><!--
+			--><li></li><!--
+			--><li></li><!--
+			--><li></li><!--
+		--></ul>
+	</nav>
+
+	<div class="noticeBanner"> <!-- Under banner made in photoshop; will display high priority or maintenance notifications... similar to old status page -->
+
+	</div>
+
+	<section id="main"> <!-- will put main stuff here... clearly lol -->
+		
+
+	</section>
+
+	<aside id="quickLinks"> <!-- In a little box off to the left side probably will put "Most important or funny stuff" not sure yet -->
+		
+
+	</aside>
+
+	<aside id="serversGlance"> <!-- Bringing it back! It will work this time, I am determined! -->
+			
+
+	</aside>
+
+	<footer> <!-- Self-explanatory... I hope, but probably just basic.. ultra basic. We will see -->
+
+	</footer>
+
 
 
 
