Have some what of a layout going. Completely random :)

--- a/index.html
+++ b/index.html
@@ -14,36 +14,93 @@
 
 	<nav>
 		<ul>
-			<li></li><!--
-			--><li></li><!--
-			--><li></li><!--
-			--><li></li><!--
-			--><li></li><!--
+			<li>Home</li><!--
+			--><li>Forums</li><!--
+			--><li>Downloads</li><!--
+			--><li>Status</li><!--
+			--><li>About</li><!--
 		--></ul>
 	</nav>
 
-	<div class="noticeBanner"> <!-- Under banner made in photoshop; will display high priority or maintenance notifications... similar to old status page -->
+	<div id="wrapper"> <!-- Let's grab everything into a box shall we? -->
+		<div class="noticeBanner"> <!-- Under banner made in photoshop; will display high priority or maintenance notifications... similar to old status page -->
+			<div class="noticeContainer" hidden>
 
-	</div>
+			<h3>Notice!</h3>
+			<h5>Here's a test notice</h5>
 
-	<section id="main"> <!-- will put main stuff here... clearly lol -->
-		
+			</div>
+		</div>
 
-	</section>
+		<section id="main"> <!-- will put main stuff here... clearly lol -->
+			<div id="mainContainer">
 
-	<aside id="quickLinks"> <!-- In a little box off to the left side probably will put "Most important or funny stuff" not sure yet -->
-		
+				<article class="default">
+					<h2>Introduction</h2>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+				</article>
 
-	</aside>
+				<article class="default">
+					<h2>Your #1 gay guy :3</h2>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+				</article>
 
-	<aside id="serversGlance"> <!-- Bringing it back! It will work this time, I am determined! -->
-			
+				<article class="default">
+					<h2>OMG IT'S A CAT</h2>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............</p>
+				</article>
+			</div>
+		</section>
 
-	</aside>
+		<aside id="quickLinks"> <!-- In a little box off to the left side probably will put "Most important or funny stuff" not sure yet -->
+			<h3>Random Shit</h3>
+				<ol>
+					<li>The Fuck is this?</li>
+					<li>The hell is that?</li>
+					<li>Who the fuck is you?</li>
+					<li>..and what the fuck is that?</li>
+					<li>THE FUCK IS ALL THIS SHIT?!??!!</li>
+				</ol>
 
-	<footer> <!-- Self-explanatory... I hope, but probably just basic.. ultra basic. We will see -->
+		</aside>
 
+		<aside id="serversGlance"> <!-- Bringing it back! It will work this time, I am determined! -->
+			<h3>Here's a Server Glance</h3>
+				<ul>
+					<li>Node01 - <span class="offline">Actin Suspect</span></li>
+					<li>Node02 - <span class="online">Looks Good!</span></li>
+					<li>Technic MC: HCK - <span class="online">Looks Good!</span></li>
+					<li>Rachel MC - <span class="offline">Suspect! Blocks fallen out the world</span></li>
+					<li>Teamspeak 3 - <span class="online">Looks Good!</span></li>
+				</ul>
+
+		</aside>
+
+	<footer hidden> <!-- Self-explanatory... I hope, but probably just basic.. ultra basic. We will see -->
+		<small>&copy; 2008-2017 Kitten Approved Gaming Network - Justin</small>
 	</footer>
+
+	</div><!-- end wrapper -->
+
+
 
 
 
