Added some background; not finished yet!

--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
 	<div id="wrapper"> <!-- Let's grab everything into a box shall we? -->
 		<div class="noticeBanner"> <!-- Under banner made in photoshop; will display high priority or maintenance notifications... similar to old status page -->
 			<div class="noticeContainer" hidden>
+				<h3>Notice! <br/> <small>I'll disappear magically at some point</small></h3>
 
-			<h3>Notice!</h3>
-			<h5>Here's a test notice</h5>
+
+				<div id="broadcast">
+					<h4>Alert type:</h4>
+					<p>Critical</p>
+					<br/>
+					<h4>Server:</h4>
+					<p>HCK</p>
+					<br/>
+					<h4>Description:</h4>
+					<p>Cat found the power cord amusing. Downtime < 5 minutes</p>
+				</div>
 
 			</div>
 		</div>
@@ -37,7 +47,7 @@
 
 				<article class="default">
 					<h2>Introduction</h2>
-						<p>Here's some filler shit...............</p>
+						<p>Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............</p>
 						<p>Here's some filler shit...............</p>
 						<p>Here's some filler shit...............</p>
 						<p>Here's some filler shit...............</p>
