Have something sorta decent. Gonna try a twitter feed next and below server's glance

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<header>
-		<h1>Kitten Approved Gaming: Of the Randomness</h1>
+		<h1>Kitten Approved Gaming: Appears to have turned Minecrafty-like</h1>
 		<p>Let's be part of something fun?</p>
 	</header>
 
@@ -102,6 +102,10 @@
 					<li>Teamspeak 3 - <span class="online">Looks Good!</span></li>
 				</ul>
 
+		</aside>
+
+		<aside id="twitter">
+			
 		</aside>
 
 	<footer hidden> <!-- Self-explanatory... I hope, but probably just basic.. ultra basic. We will see -->
