Added twitter feed! :D

--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
 
 		</aside>
 
-		<aside id="twitter">
-			
+		<aside id="twitter"> <!-- My twitter feed :D -->
+		<a href="https://twitter.com/justinkitten4ce" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @JustinKittenforce on Twitter</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+		<a class="twitter-timeline" data-lang="en" data-width="600" data-height="700" data-theme="light" data-link-color="#cc66ff" href="https://twitter.com/JustinKitten4ce"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</aside>
 
 	<footer hidden> <!-- Self-explanatory... I hope, but probably just basic.. ultra basic. We will see -->
