Cleaned up all the filler stuff. Still nothing to link yet for navigation

--- a/index.html
+++ b/index.html
@@ -43,65 +43,43 @@
 		</div>
 
 		<section id="main"> <!-- will put main stuff here... clearly lol -->
-			<div id="mainContainer">
+			<div id="mainContainer"> <!-- Newest post first! -->
+
+				<article class="default">
+					<h2>Progress Update - Jan. 18th, 2017 @ 2340</h2>
+						<p>I will from time to time post progress updates on whats new with the site or new servers that went up recently. I'll also put any issues here that may arise in a very noticeable alert banner</p>
+						<p>Need to contact? DM me on Twitter or send an email to: <a href="mailto:justin@kittenapprovedgaming.com" title="Email me! :D">justin@kittenapprovedgaming.com</a></p>
+					
+				</article>
 
 				<article class="default">
 					<h2>Introduction</h2>
-						<p>Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
+						<p>Hi, I'm Justin! *waves*</p>
+						<p>I'll start using this page as a front-end and eventually expand on to it. (here's to keeping my word!) </p> 
+						<p>I plan to make this into a little community of gamers for all types, but let's focus on minecraft for starters. If you enjoy minecraft, casually or hardcore, and like modpacks or vanilla; Join us, let's be part of something fun?</p>
 				</article>
 
-				<article class="default">
-					<h2>Your #1 gay guy :3</h2>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-				</article>
 
-				<article class="default">
-					<h2>OMG IT'S A CAT</h2>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-						<p>Here's some filler shit...............</p>
-				</article>
 			</div>
 		</section>
 
 		<aside id="quickLinks"> <!-- In a little box off to the left side probably will put "Most important or funny stuff" not sure yet -->
-			<h3>Random Shit</h3>
-				<ol>
-					<li>The Fuck is this?</li>
-					<li>The hell is that?</li>
-					<li>Who the fuck is you?</li>
-					<li>..and what the fuck is that?</li>
-					<li>THE FUCK IS ALL THIS SHIT?!??!!</li>
-				</ol>
+			<h3>Quick Links!</h3>
+				<h4>Nothing to show here yet</h4>
+
+				<!--<ol>
+					<li></li>
+				</ol> -->
 
 		</aside>
 
 		<aside id="serversGlance"> <!-- Bringing it back! It will work this time, I am determined! -->
 			<h3>Here's a Server Glance</h3>
 				<ul>
-					<li>Node01 - <span class="offline">Actin Suspect</span></li>
-					<li>Node02 - <span class="online">Looks Good!</span></li>
-					<li>Technic MC: HCK - <span class="online">Looks Good!</span></li>
-					<li>Rachel MC - <span class="offline">Suspect! Blocks fallen out the world</span></li>
-					<li>Teamspeak 3 - <span class="online">Looks Good!</span></li>
+					<li>KITAN HCK - <span class="online">No issues to report</span></li>
+					<li>Rachel MC - <span class="online">No issues to report</span></li>
+					<li>Teamspeak 3 - <span class="online">No issues to report</span></li>
 				</ul>
-
 		</aside>
 
 		<aside id="twitter"> <!-- My twitter feed :D -->
