Fixed the formatting a little bit on the downloads page.

--- a/download/index.html
+++ b/download/index.html
@@ -78,16 +78,16 @@
 				</div><!-- end rii header -->
 
 				<div id="riiInfo">
-					<h3>Installation :D</h3>
+					<h3>Installation</h3>
 						<p>In Curse Client, <strong>click "Browse All Modpacks"</strong> and search for <strong>"Hermit" in the top left search bar</strong>.</p>
 						<p>The first result should be <strong>"FTB Presents HermitPack", click install</strong>.</p>
 						<p><em>**If the installation fails the first attempt shortly after clicking install; wait a couple seconds and try again. Should work just fine after**</em></p>
 
-					<h3>Connection</h3>
+					<h3>How to join the server?</h3>
 						<p>To join Multiplayer add server:</p>
 						<p><strong>riihermit.kita-servers.co</strong></p>
 
-					<h3>Additional Mods?</h3>
+					<h3>Any additional mods?</h3>
 						<p>No additional mods or addon's are needed at this moment; unless you prefer to use your own client-sided mods.</p>
 				</div><!-- end rii info -->
 			</section><!-- end rii dl -->
